[gd_scene load_steps=8 format=2]

[ext_resource path="res://Heal Machine.gd" type="Script" id=1]
[ext_resource path="res://Graphics/healcube0000.png" type="Texture" id=2]
[ext_resource path="res://Graphics/healcube0003.png" type="Texture" id=3]
[ext_resource path="res://Graphics/healcube0004.png" type="Texture" id=4]
[ext_resource path="res://Graphics/monitor.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "hurt",
"speed": 1.5
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="Heal Machine" type="Node2D"]
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="monitor" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -70 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
